--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,7 +29,7 @@
             android:id="@+id/editText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/User"
+            android:hint="@string/estrainer"
             android:minHeight="48dp"
             android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
