--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.GymAppXML" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="android:background">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="android:editTextColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:button">@color/black</item>
+        <item name="colorError">@color/red</item>
     </style>
 </resources>
