--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#303030</color>
     <color name="light_gray">#808080</color>"
+    <color name="red" type="color">#af1541</color>
 </resources>
