--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/dark_gray</item>
-        
+        <item name="colorPrimaryVariant">@color/dark_gray</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorError">@color/red</item>
     </style>
 
     <style name="Theme.GymAppXML" parent="Base.Theme.GymAppXML" />
