--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
         app:layout_constraintVertical_bias="0.158"
         tools:ignore="LabelFor,SpeakableTextPresentCheck" />
 
-     <!--<CheckBox
+     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         tools:ignore="HardcodedText,VisualLintBounds" />
-        -->
+
 
     <Button
         android:id="@+id/button"
