--- a/app/src/main/res/layout/activity_workouts.xml
+++ b/app/src/main/res/layout/activity_workouts.xml
@@ -85,21 +85,6 @@
         app:layout_constraintVertical_bias="0.363"
         tools:ignore="TextSizeCheck" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="313dp"
-        android:layout_height="42dp"
-        android:gravity="center"
-        android:text="@string/workoutsInfo"
-        android:textColor="#FFC107"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9"
-        app:layout_constraintVertical_bias="0.054"
-        tools:ignore="TextSizeCheck" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
@@ -157,23 +142,34 @@
     <ListView
         android:id="@+id/workoutList"
         android:layout_width="148dp"
-        android:layout_height="351dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        android:layout_height="262dp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/exerciseImage"
         app:layout_constraintEnd_toStartOf="@+id/exerciseView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9"
-        app:layout_constraintVertical_bias="0.972" />
+        app:layout_constraintTop_toTopOf="@+id/guideline9" />
 
     <ListView
         android:id="@+id/exerciseView"
-        android:layout_width="248dp"
-        android:layout_height="351dp"
+        android:layout_width="189dp"
+        android:layout_height="389dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/workoutList"
         app:layout_constraintTop_toTopOf="@+id/guideline9"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.305" />
+
+    <ImageView
+        android:id="@+id/exerciseImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.081"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workoutList"
+        app:layout_constraintVertical_bias="1.0"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
